--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://JagannathSahoo.github.io/movieapp",
+  "homepage": "http://JagannthSahoo.github.io/",
   "name": "movieapp",
   "version": "0.1.0",
   "private": true,
