--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JagannthSahoo.github.io",
+  "homepage": "https://SahooJaga.github.io/movieapp",
   "name": "movieapp",
   "version": "0.1.0",
   "private": true,
